--- a/index.html
+++ b/index.html
@@ -8,19 +8,32 @@
     <link rel="stylesheet" href="index.css">
 
 </head>
+
 <body>
-    <div class="calcPosition">
         <div class="calculator">
-            <div class="screenDisplay">
+            <div class="screenDisplay"><h2>Display</h2></div>
+            <div class="addition"><button>addition</button></div>
+            <div class="subtract"><button>subtract</button></div>
+            <div class="multiply"><button>multiply</button></div>
+            <div class="division"><button>division</button></div>
+            <div class="operate"><button>operate</button></div>
 
-            </div>
-            
-            <div class="buttons">
+                <div class="zero"><button>0</button></div>
+                <div class="one"><button>1</button></div>
+                <div class="two"><button>2</button></div>
+                <div class="three"><button>3</button></div>
+                <div class="four"><button>4</button></div>
+                <div class="five"><button>5</button></div>
+                <div class="six"><button>6</button></div>
+                <div class="seven"><button>7</button></div>
+                <div class="eight"><button>8</button></div>
+                <div class="nine"><button>9</button></div>
 
-            </div>
+
+
+                <div class="equals"><button>=</button></div>
+                <div class="clear"><button>clear</button></div>
         </div>
-    </div>
-
     
 </body>
 
