Added button responsiveness and value to the number and the operator buttons.Now when the buttons are pressed they will display there value on the screen and can be stacked.The stacking issue was the main problem as before one could not been able to have anything but one character on screen.Although the problem is fixed,it should be noted to effectivise the added code when the project is fundamentally done.Since the code is semingly to long and repetetive.

--- a/index.html
+++ b/index.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Calculator</title>
 
-    <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="index.css">
 
 </head>
 
 <body>
-        <div class="calculator">
-            <div class="screenDisplay"><h2>Display</h2></div>
-            <div class="addition"><button>addition</button></div>
-            <div class="subtract"><button>subtract</button></div>
-            <div class="multiply"><button>multiply</button></div>
-            <div class="division"><button>division</button></div>
-            <div class="operate"><button>operate</button></div>
+<div class="calculator">
+<div class="screenDisplay"><h2 class="textDisplay"></h2></div>
+<div class="addition"><button>addition</button></div>
+<div class="subtract"><button>subtract</button></div>
+<div class="multiply"><button>multiply</button></div>
+<div class="division"><button>division</button></div>
+<div class="operate"><button>=</button></div>
+<div class="numbers">
+<div class="zero"><button>0</button></div>
+<div class="one"><button>1</button></div>
+<div class="two"><button>2</button></div>
+<div class="three"><button>3</button></div>
+<div class="four"><button>4</button></div>
+<div class="five"><button>5</button></div>
+<div class="six"><button>6</button></div>
+<div class="seven"><button>7</button></div>
+<div class="eight"><button>8</button></div>
+<div class="nine"><button>9</button></div>
+</div>
 
-                <div class="zero"><button>0</button></div>
-                <div class="one"><button>1</button></div>
-                <div class="two"><button>2</button></div>
-                <div class="three"><button>3</button></div>
-                <div class="four"><button>4</button></div>
-                <div class="five"><button>5</button></div>
-                <div class="six"><button>6</button></div>
-                <div class="seven"><button>7</button></div>
-                <div class="eight"><button>8</button></div>
-                <div class="nine"><button>9</button></div>
-
-
-
-                <div class="equals"><button>=</button></div>
-                <div class="clear"><button>clear</button></div>
-        </div>
-    
+<div class="clear"><button>clear</button></div>
+</div>
 </body>
 
 <script type="text/javascript" src="index.js"></script>
